// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolbarFieldRangedMonthly Component should export select options: toolbarFieldOptions 1`] = `
[
  {
    "_title": "current",
    "isCurrent": true,
    "selected": false,
    "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"current"})",
    "value": {
      "endDate": 2019-07-31T23:59:59.999Z,
      "startDate": 2019-07-01T00:00:00.000Z,
    },
  },
  {
    "_title": "june",
    "selected": false,
    "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"June"})",
    "value": {
      "endDate": 2019-06-30T23:59:59.999Z,
      "startDate": 2019-06-01T00:00:00.000Z,
    },
  },
  {
    "_title": "may",
    "selected": false,
    "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"May"})",
    "value": {
      "endDate": 2019-05-31T23:59:59.999Z,
      "startDate": 2019-05-01T00:00:00.000Z,
    },
  },
  {
    "_title": "april",
    "selected": false,
    "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"April"})",
    "value": {
      "endDate": 2019-04-30T23:59:59.999Z,
      "startDate": 2019-04-01T00:00:00.000Z,
    },
  },
  {
    "_title": "march",
    "selected": false,
    "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"March"})",
    "value": {
      "endDate": 2019-03-31T23:59:59.999Z,
      "startDate": 2019-03-01T00:00:00.000Z,
    },
  },
  {
    "_title": "february",
    "selected": false,
    "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"February"})",
    "value": {
      "endDate": 2019-02-28T23:59:59.999Z,
      "startDate": 2019-02-01T00:00:00.000Z,
    },
  },
  {
    "_title": "january",
    "selected": false,
    "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"January"})",
    "value": {
      "endDate": 2019-01-31T23:59:59.999Z,
      "startDate": 2019-01-01T00:00:00.000Z,
    },
  },
  {
    "_title": "december",
    "selected": false,
    "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"December 2018"})",
    "value": {
      "endDate": 2018-12-31T23:59:59.999Z,
      "startDate": 2018-12-01T00:00:00.000Z,
    },
  },
  {
    "_title": "november",
    "selected": false,
    "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"November 2018"})",
    "value": {
      "endDate": 2018-11-30T23:59:59.999Z,
      "startDate": 2018-11-01T00:00:00.000Z,
    },
  },
  {
    "_title": "october",
    "selected": false,
    "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"October 2018"})",
    "value": {
      "endDate": 2018-10-31T23:59:59.999Z,
      "startDate": 2018-10-01T00:00:00.000Z,
    },
  },
  {
    "_title": "september",
    "selected": false,
    "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"September 2018"})",
    "value": {
      "endDate": 2018-09-30T23:59:59.999Z,
      "startDate": 2018-09-01T00:00:00.000Z,
    },
  },
  {
    "_title": "august",
    "selected": false,
    "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"August 2018"})",
    "value": {
      "endDate": 2018-08-31T23:59:59.999Z,
      "startDate": 2018-08-01T00:00:00.000Z,
    },
  },
]
`;

exports[`ToolbarFieldRangedMonthly Component should handle selecting an option directly: selected option 1`] = `
<Select
  aria-label="t(curiosity-toolbar.placeholder, {"context":"rangedMonthly"})"
  ariaLabel="Select option"
  className=""
  data-test="toolbarFieldRangeGranularity"
  direction="down"
  id="generatedid-"
  isDisabled={false}
  isDropdownButton={false}
  isFlipEnabled={false}
  isInline={true}
  isToggleText={true}
  maxHeight={250}
  name={null}
  onSelect={[Function]}
  onSplitButton={[Function]}
  options={
    [
      {
        "_title": "current",
        "isCurrent": true,
        "selected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"current"})",
        "value": {
          "endDate": 2019-07-31T23:59:59.999Z,
          "startDate": 2019-07-01T00:00:00.000Z,
        },
      },
      {
        "_title": "june",
        "selected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"June"})",
        "value": {
          "endDate": 2019-06-30T23:59:59.999Z,
          "startDate": 2019-06-01T00:00:00.000Z,
        },
      },
      {
        "_title": "may",
        "selected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"May"})",
        "value": {
          "endDate": 2019-05-31T23:59:59.999Z,
          "startDate": 2019-05-01T00:00:00.000Z,
        },
      },
      {
        "_title": "april",
        "selected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"April"})",
        "value": {
          "endDate": 2019-04-30T23:59:59.999Z,
          "startDate": 2019-04-01T00:00:00.000Z,
        },
      },
      {
        "_title": "march",
        "selected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"March"})",
        "value": {
          "endDate": 2019-03-31T23:59:59.999Z,
          "startDate": 2019-03-01T00:00:00.000Z,
        },
      },
      {
        "_title": "february",
        "selected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"February"})",
        "value": {
          "endDate": 2019-02-28T23:59:59.999Z,
          "startDate": 2019-02-01T00:00:00.000Z,
        },
      },
      {
        "_title": "january",
        "selected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"January"})",
        "value": {
          "endDate": 2019-01-31T23:59:59.999Z,
          "startDate": 2019-01-01T00:00:00.000Z,
        },
      },
      {
        "_title": "december",
        "selected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"December 2018"})",
        "value": {
          "endDate": 2018-12-31T23:59:59.999Z,
          "startDate": 2018-12-01T00:00:00.000Z,
        },
      },
      {
        "_title": "november",
        "selected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"November 2018"})",
        "value": {
          "endDate": 2018-11-30T23:59:59.999Z,
          "startDate": 2018-11-01T00:00:00.000Z,
        },
      },
      {
        "_title": "october",
        "selected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"October 2018"})",
        "value": {
          "endDate": 2018-10-31T23:59:59.999Z,
          "startDate": 2018-10-01T00:00:00.000Z,
        },
      },
      {
        "_title": "september",
        "selected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"September 2018"})",
        "value": {
          "endDate": 2018-09-30T23:59:59.999Z,
          "startDate": 2018-09-01T00:00:00.000Z,
        },
      },
      {
        "_title": "august",
        "selected": true,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"August 2018"})",
        "value": {
          "endDate": 2018-08-31T23:59:59.999Z,
          "startDate": 2018-08-01T00:00:00.000Z,
        },
      },
    ]
  }
  placeholder="t(curiosity-toolbar.placeholder, {"context":"rangedMonthly"})"
  position="left"
  selectedOptions={null}
  splitButtonVariant={null}
  toggleIcon={null}
  variant="single"
/>
`;

exports[`ToolbarFieldRangedMonthly Component should handle updating granularity and date through redux state with component: dispatch, component 1`] = `
[
  [
    [
      {
        "type": "SET_QUERY_CLEAR_INVENTORY_LIST",
        "viewId": undefined,
      },
      {
        "granularity": "Daily",
        "type": "SET_QUERY_RHSM_granularity",
        "viewId": undefined,
      },
      {
        "beginning": "2019-07-01T00:00:00.000Z",
        "type": "SET_QUERY_RHSM_beginning",
        "viewId": undefined,
      },
      {
        "ending": "2019-07-31T23:59:59.999Z",
        "type": "SET_QUERY_RHSM_ending",
        "viewId": undefined,
      },
    ],
  ],
]
`;

exports[`ToolbarFieldRangedMonthly Component should handle updating granularity and date through redux state with hook: dispatch, hook 1`] = `
[
  [
    [
      {
        "type": "SET_QUERY_CLEAR_INVENTORY_LIST",
        "viewId": "loremIpsum",
      },
      {
        "granularity": "Daily",
        "type": "SET_QUERY_RHSM_granularity",
        "viewId": "loremIpsum",
      },
      {
        "beginning": "2018-08-01T00:00:00.000Z",
        "type": "SET_QUERY_RHSM_beginning",
        "viewId": "loremIpsum",
      },
      {
        "ending": "2018-08-31T00:00:00.000Z",
        "type": "SET_QUERY_RHSM_ending",
        "viewId": "loremIpsum",
      },
    ],
  ],
]
`;

exports[`ToolbarFieldRangedMonthly Component should render a basic component: basic 1`] = `
<Select
  aria-label="t(curiosity-toolbar.placeholder, {"context":"rangedMonthly"})"
  ariaLabel="Select option"
  className=""
  data-test="toolbarFieldRangeGranularity"
  direction="down"
  id="generatedid-"
  isDisabled={false}
  isDropdownButton={false}
  isFlipEnabled={false}
  isInline={true}
  isToggleText={true}
  maxHeight={250}
  name={null}
  onSelect={[Function]}
  onSplitButton={[Function]}
  options={
    [
      {
        "_title": "current",
        "isCurrent": true,
        "selected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"current"})",
        "value": {
          "endDate": 2019-07-31T23:59:59.999Z,
          "startDate": 2019-07-01T00:00:00.000Z,
        },
      },
      {
        "_title": "june",
        "selected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"June"})",
        "value": {
          "endDate": 2019-06-30T23:59:59.999Z,
          "startDate": 2019-06-01T00:00:00.000Z,
        },
      },
      {
        "_title": "may",
        "selected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"May"})",
        "value": {
          "endDate": 2019-05-31T23:59:59.999Z,
          "startDate": 2019-05-01T00:00:00.000Z,
        },
      },
      {
        "_title": "april",
        "selected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"April"})",
        "value": {
          "endDate": 2019-04-30T23:59:59.999Z,
          "startDate": 2019-04-01T00:00:00.000Z,
        },
      },
      {
        "_title": "march",
        "selected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"March"})",
        "value": {
          "endDate": 2019-03-31T23:59:59.999Z,
          "startDate": 2019-03-01T00:00:00.000Z,
        },
      },
      {
        "_title": "february",
        "selected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"February"})",
        "value": {
          "endDate": 2019-02-28T23:59:59.999Z,
          "startDate": 2019-02-01T00:00:00.000Z,
        },
      },
      {
        "_title": "january",
        "selected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"January"})",
        "value": {
          "endDate": 2019-01-31T23:59:59.999Z,
          "startDate": 2019-01-01T00:00:00.000Z,
        },
      },
      {
        "_title": "december",
        "selected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"December 2018"})",
        "value": {
          "endDate": 2018-12-31T23:59:59.999Z,
          "startDate": 2018-12-01T00:00:00.000Z,
        },
      },
      {
        "_title": "november",
        "selected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"November 2018"})",
        "value": {
          "endDate": 2018-11-30T23:59:59.999Z,
          "startDate": 2018-11-01T00:00:00.000Z,
        },
      },
      {
        "_title": "october",
        "selected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"October 2018"})",
        "value": {
          "endDate": 2018-10-31T23:59:59.999Z,
          "startDate": 2018-10-01T00:00:00.000Z,
        },
      },
      {
        "_title": "september",
        "selected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"September 2018"})",
        "value": {
          "endDate": 2018-09-30T23:59:59.999Z,
          "startDate": 2018-09-01T00:00:00.000Z,
        },
      },
      {
        "_title": "august",
        "selected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"August 2018"})",
        "value": {
          "endDate": 2018-08-31T23:59:59.999Z,
          "startDate": 2018-08-01T00:00:00.000Z,
        },
      },
    ]
  }
  placeholder="t(curiosity-toolbar.placeholder, {"context":"rangedMonthly"})"
  position="left"
  selectedOptions={null}
  splitButtonVariant={null}
  toggleIcon={null}
  variant="single"
/>
`;
